--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.2",
+    "nodemon": "^2.0.12",
     "path": "^0.12.7"
   }
 }
