--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,11 +24,10 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
-        node-version: "14.15.3"
+        node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - name: Upgrade NPM
-    - run: npm install -g npm
+    - run: rm package-lock.json
+    - run: npm i
     - run: npm ci
-    - run: npm install
-    - run: npm start 
+    - run: npm run build --if-present
     - run: npm test
