--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,13 +5,12 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main, development]
   pull_request:
-    branches: [ main ]
+    branches: [main, development]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -20,19 +19,19 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: rm package-lock.json
-    - run: npm i
-    - run: npm ci
-    - run: npm run build --if-present
-    - name: run test
-      run: npm test
-      env:
-        MONGO_USERNAME: crm-project
-        MONGO_PASSWORD: COMP30022
-        JWT_PRIVATE_KEY: COMP30022
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      - run: rm package-lock.json
+      - run: npm i
+      - run: npm ci
+      - run: npm run build --if-present
+      - name: run test
+        run: npm test
+        env:
+          MONGO_USERNAME: crm-project
+          MONGO_PASSWORD: COMP30022
+          JWT_PRIVATE_KEY: COMP30022
