--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "antd": "^4.16.13",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.1",
+    "pubsub-js": "^1.9.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
