--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -53,6 +54,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
+    "cypress": "^8.6.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "react-test-renderer": "^17.0.2"
   }
 }
