--- a/.github/workflows/end-to-end-testing.yml
+++ b/.github/workflows/end-to-end-testing.yml
@@ -27,7 +27,7 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - name: run test
-        run: npm start
+        run: npm start & 
         env:
           MONGO_USERNAME: ${{ secrets.MONGO_USERNAME }}
           MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
@@ -39,7 +39,7 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           build: npm run build
-          start: npm start
+          start: npm start 
       
           
  
