--- a/.github/workflows/end-to-end-testing.yml
+++ b/.github/workflows/end-to-end-testing.yml
@@ -33,13 +33,12 @@ jobs:
           MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
           JWT_PRIVATE_KEY: ${{ secrets.JWT_PRIVATE_KEY }}
           FRONT_END_URL: ${{ secrets.JWT_PRIVATE_KEY }}
-      - name: back end directory
-        run: cd client
       - name: Front End Checkout
         uses: actions/checkout@v2
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
+          project: ./client
           build: npm run build
           start: npm start 
       
