--- a/.github/workflows/end-to-end-testing.yml
+++ b/.github/workflows/end-to-end-testing.yml
@@ -36,11 +36,12 @@ jobs:
       - name: Front End Checkout
         uses: actions/checkout@v2
       - name: Cypress run
-        uses: cypress-io/github-action@v2
-        with:
-          project: ./client
-          build: npm run build
-          start: npm start 
+        run: |
+          cd client
+          npm install
+          npm start &
+          npm run cypress:open
+
       
           
  
