--- a/.github/workflows/end-to-end-testing.yml
+++ b/.github/workflows/end-to-end-testing.yml
@@ -7,32 +7,29 @@ on:
     branches: [main, development]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    # strategy:
-    #   matrix:
-    #     node-version: [12.x, 14.x, 16.x]
-    # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+  backend setup:
     steps:
       - uses: actions/checkout@v2
-      - name: BackEnd Setup
-        uses: actions/setup-node@v2
-        with:
+      - uses: actions/setup-node@v2
+        with: 
           node-version: "14"
           cache: "npm"
-      - run: rm package-lock.json
-      - run: npm i
-      - run: npm ci
+      - run: |
+        rm package-lock.json
+        npm i
+        npm ci
       - run: npm run build --if-present
-      - name: run test
+      - name: start backend server
         run: npm start
         env:
           MONGO_USERNAME: ${{ secrets.MONGO_USERNAME }}
           MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
           JWT_PRIVATE_KEY: ${{ secrets.JWT_PRIVATE_KEY }}
           FRONT_END_URL: ${{ secrets.JWT_PRIVATE_KEY }}
+
+  frontend setup:
+    working-directory: ./client
+    steps: 
       - name: Front End Checkout
         uses: actions/checkout@v2
       - name: Cypress run
@@ -40,6 +37,4 @@ jobs:
         with:
           build: npm run build
           start: npm start
-      
-          
- 
+    
