--- a/.github/workflows/end-to-end-testing.yml
+++ b/.github/workflows/end-to-end-testing.yml
@@ -39,6 +39,8 @@ jobs:
         run: |
           cd client
           npm install
+          npm ci
+          npm run build --if-present
           npm start &
           wait-on http://localhost:3000
           npm run cypress:open
