--- a/.github/workflows/end-to-end-testing.yml
+++ b/.github/workflows/end-to-end-testing.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Cypress
         run: |
           cd client
+          rm package-lock.json
           npm install
           npm ci
           npm run build --if-present
