--- a/.github/workflows/end-to-end-testing.yml
+++ b/.github/workflows/end-to-end-testing.yml
@@ -7,45 +7,14 @@ on:
     branches: [main, development]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    # strategy:
-    #   matrix:
-    #     node-version: [12.x, 14.x, 16.x]
-    # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+  cypress-run:
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - name: BackEnd Setup
-        uses: actions/setup-node@v2
+      - uses: cypress-io/github-action@v2
         with:
-          node-version: "14"
-          cache: "npm"
-      - run: rm package-lock.json
-      - run: npm i
-      - run: npm ci
-      - run: npm run build --if-present
-      - name: run test
-        run: npm start & 
-        env:
-          MONGO_USERNAME: ${{ secrets.MONGO_USERNAME }}
-          MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
-          JWT_PRIVATE_KEY: ${{ secrets.JWT_PRIVATE_KEY }}
-          FRONT_END_URL: ${{ secrets.JWT_PRIVATE_KEY }}
-      - name: Front End Checkout
-        uses: actions/checkout@v2
-      - name: Cypress
-        run: |
-          cd client
-          rm package-lock.json
-          npm install
-          npm ci
-          npm run build --if-present
-          npm start &
-          wait-on http://localhost:3000
-          npm run cypress:open
-
+          start: npm start
+          working-directory: client
           
 
       
