--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.9",
+    "node-cron": "^3.0.0",
     "nodemailer": "^6.7.0",
     "nodemon": "^2.0.13",
     "path": "^0.12.7",
